--- a/util/references.bib
+++ b/util/references.bib
@@ -1,26 +1,37 @@
-@Book{knuth:84,
-  author = 	 {Donald E. Knuth},
-  title = 	 {The {\TeX} Book},
-  publisher = 	 {Addison-Wesley},
-  year = 	 {1984},
-  edition = 	 {15th}
+@book{knuth:84,
+	author = {Donald E. Knuth},
+	title = {The {\TeX} Book},
+	publisher = {Addison-Wesley},
+	year = {1984},
+	edition = {15th},
 }
 
-@InCollection{boulic:91,
-  author = 	 {R. Boulic and O. Renault},
-  title = 	 {3D Hierarchies for Animation},
-  booktitle = 	 {New Trends in Animation and Visualization},
-  publisher =    {John Wiley {\&} Sons ltd.},
-  year = 	 {1991},
-  editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann}
+@incollection{boulic:91,
+	author = {R. Boulic and O. Renault},
+	title = {3D Hierarchies for Animation},
+	booktitle = {New Trends in Animation and Visualization},
+	publisher = {John Wiley {\&} Sons ltd.},
+	year = {1991},
+	editor = {Nadia Magnenat-Thalmann and Daniel Thalmann},
 }
 
-@InCollection{smith:99,
-  author = 	 {A. Smith and B. Jones},
-  title = 	 {On the Complexity of Computing},
-  booktitle = 	 {Advances in Computer Science},
-  pages = 	 {555--566},
-  publisher =    {Publishing Press},
-  year = 	 {1999},
-  editor = 	 {A. B. Smith-Jones}
+@incollection{smith:99,
+	author = {A. Smith and B. Jones},
+	title = {On the Complexity of Computing},
+	booktitle = {Advances in Computer Science},
+	pages = {555--566},
+	publisher = {Publishing Press},
+	year = {1999},
+	editor = {A. B. Smith-Jones},
+}
+
+@article{artigorwa,
+	title = {Routing and wavelength assignment in optical networks},
+	author = {Ozdaglar, Asuman E and Bertsekas, Dimitri P},
+	journal = {IEEE/ACM transactions on networking},
+	volume = {11},
+	number = {2},
+	pages = {259--272},
+	year = {2003},
+	publisher = {IEEE},
 }
