--- a/util/references.bib
+++ b/util/references.bib
@@ -35,3 +35,10 @@
 	year = {2003},
 	publisher = {IEEE},
 }
+
+@book{livroprofessor,
+	title = {Optical networks: a practical perspective},
+	author = {Ramaswami, Rajiv and Sivarajan, Kumar and Sasaki, Galen},
+	year = {2009},
+	publisher = {Morgan Kaufmann},
+}
