--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx,url}
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
+\usepackage{tikz}
      
 \sloppy
 
@@ -12,13 +13,11 @@
 \maketitle
 
 \input{./sections/2_abstract}
-\input{./sections/3_general}
-\input{./sections/4_first_page}
-\input{./sections/5_cd_roms}
-\input{./sections/6_sections_paragraph}
-\input{./sections/7_figures_captions}
-\input{./sections/8_images}
-\input{./sections/9_references}
+\input{./sections/3_introduction}
+\input{./sections/4_fundaments}
+\input{./sections/5_problem}
+\input{./sections/6_algorithm}
+\input{./sections/7_conclusion}
 
 \bibliographystyle{./util/sbc}
 \bibliography{./util/references}
