--- a/sections/2_abstract.tex
+++ b/sections/2_abstract.tex
@@ -1,9 +1,7 @@
 \begin{resumo} 
-  Este meta-artigo descreve o estilo a ser usado na confecção de artigos e
-  resumos de artigos para publicação nos anais das conferências organizadas
-  pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
-  escritos em português. Artigos em inglês deverão apresentar apenas abstract.
-  Nos dois casos, o autor deve tomar cuidado para que o resumo (e o abstract)
-  não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
-  página do artigo.
+  O presente artigo desenvolve um algoritmo de roteamento em redes ópticas
+  para encontrar o caminho físico entre dois pontos (A e B).
+  A proposta utiliza o algoritmo de Dijkstra aplicado a uma topologia de rede óptica modelada como grafo.
+  São discutidos elementos constituintes das redes ópticas, alternativas de algoritmos de roteamento,
+  e aspectos de complexidade relacionados à programação linear e problemas NP-difíceis.
 \end{resumo}
