--- a/sections/5_problem.tex
+++ b/sections/5_problem.tex
@@ -1,4 +1,4 @@
-\section{Definição do Problema}
+\section{Definição do Problema} \label{sec:problem}
 
 Considere uma rede óptica modelada como um grafo $G=(V,E)$,
 onde $V$ representa os nós (caixas de emenda ou atendimento) e $E$ representa enlaces (cabos/fibras).
