--- a/sections/6_algorithm.tex
+++ b/sections/6_algorithm.tex
@@ -1,4 +1,4 @@
-\section{Desenvolvimento do Algoritmo}\label{sec:figs}
+\section{Desenvolvimento} \label{sec:algorithm}
 
 O algoritmo de Dijkstra é empregado para resolver o problema.
 O pseudo-código é dado a seguir:
