--- a/sections/7_conclusion.tex
+++ b/sections/7_conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusão}
+\section{Conclusão} \label{sec:conclusion}
 
 Este artigo apresentou uma abordagem para o roteamento físico em redes ópticas
 utilizando o algoritmo de Dijkstra. A fundamentação teórica mostrou a
