--- a/util/references.bib
+++ b/util/references.bib
@@ -1,28 +1,23 @@
-@book{knuth:84,
-	author = {Donald E. Knuth},
-	title = {The {\TeX} Book},
-	publisher = {Addison-Wesley},
-	year = {1984},
-	edition = {15th},
+@incollection{dijkstra2022note,
+	title = {A note on two problems in connexion with graphs},
+	author = {Dijkstra, Edsger W},
+	booktitle = {Edsger Wybe Dijkstra: his life, work, and legacy},
+	pages = {287--290},
+	year = {2022},
 }
 
-@incollection{boulic:91,
-	author = {R. Boulic and O. Renault},
-	title = {3D Hierarchies for Animation},
-	booktitle = {New Trends in Animation and Visualization},
-	publisher = {John Wiley {\&} Sons ltd.},
-	year = {1991},
-	editor = {Nadia Magnenat-Thalmann and Daniel Thalmann},
+@article{maeda2009optical,
+	title = {Optical fibres, cables and systems. ITU-T Manual},
+	author = {Maeda, Yoichi and Montalti, F},
+	journal = {International Telecommunication Union, Geneva},
+	year = {2009},
 }
 
-@incollection{smith:99,
-	author = {A. Smith and B. Jones},
-	title = {On the Complexity of Computing},
-	booktitle = {Advances in Computer Science},
-	pages = {555--566},
-	publisher = {Publishing Press},
-	year = {1999},
-	editor = {A. B. Smith-Jones},
+@book{griva2008linear,
+	title = {Linear and nonlinear optimization 2nd edition},
+	author = {Griva, Igor and Nash, Stephen G and Sofer, Ariela},
+	year = {2008},
+	publisher = {SIAM},
 }
 
 @article{artigorwa,
