--- a/sections/2_abstract.tex
+++ b/sections/2_abstract.tex
@@ -1,7 +1,8 @@
 \begin{resumo} 
-  O presente artigo desenvolve um algoritmo de roteamento em redes ópticas
-  para encontrar o caminho físico entre dois pontos (A e B).
-  A proposta utiliza o algoritmo de Dijkstra aplicado a uma topologia de rede óptica modelada como grafo.
-  São discutidos elementos constituintes das redes ópticas, alternativas de algoritmos de roteamento,
-  e aspectos de complexidade relacionados à programação linear e problemas NP-difíceis.
+  O presente artigo desenvolve um algoritmo heurístico de roteamento em redes
+  ópticas para encontrar o caminho físico entre dois pontos ($A$ e $B$). A proposta
+  utiliza o algoritmo de Dijkstra aplicado a uma topologia de rede óptica
+  modelada como grafo. São discutidos elementos constituintes das redes
+  ópticas, alternativas de algoritmos de roteamento, e aspectos de complexidade
+  relacionados à programação linear e problemas NP-difíceis.
 \end{resumo}
