--- a/sections/4_fundaments.tex
+++ b/sections/4_fundaments.tex
@@ -1,32 +1,39 @@
 \section{Fundamentação Teórica} \label{sec:fundaments}
 
-Nesta seção discutem-se os principais conceitos relacionados às redes ópticas e aos algoritmos de roteamento.
+Para o roteamento de fibras, é necessário pelo menos o entendimento básico de 
+dois temas: (1) os elementos que compoem essas redes e (2) algoritmos, no sentido
+de operaćões, otimizaćão e tipos de problemas.
 
-\subsection{Elementos de uma Rede Óptica}
-Uma rede óptica é composta por diferentes elementos físicos:
-\begin{itemize}
-    \item \textbf{Cabos ópticos:} compostos por múltiplos tubos contendo fibras.
-    \item \textbf{Fibras ópticas:} meio físico de transmissão de sinais luminosos.
-    \item \textbf{Caixa de emenda:} ponto de junção e proteção de fibras.
-    \item \textbf{Caixa de atendimento:} permite a derivação de fibras para usuários finais.
-\end{itemize}
-Cada elemento possui custos associados (de instalação, operação e manutenção) que influenciam no peso das arestas do grafo.
+\subsection{Redes Ópticas}
 
-\subsection{Algoritmos de Roteamento}
-O problema de roteamento em redes pode ser resolvido por diferentes algoritmos:
-\begin{itemize}
-    \item \textbf{Dijkstra:} encontra o caminho de menor custo em grafos com pesos não negativos.
-    \item \textbf{Bellman-Ford:} lida com arestas de peso negativo, mas com maior complexidade temporal.
-\end{itemize}
-Para redes ópticas, em que os custos são sempre não negativos (distância, atenuação, ou custo de instalação), o algoritmo de Dijkstra é mais adequado.
+Na teoria dos grafos, um grafo é uma estrutura composta por vértices ($V$)
+(também chamados de nós) e arestas ($E$). A relaćão entre $V$ e $E$ é dado por
+$G(V,E)$. Fazendo um paralelo com uma rede óptica, os vértices seriam as Caixas
+de Emenda (CE) e as Caixas de Atendimento (CA) \cite{maeda2009optical}; os
+cabos ópticos por sua vez seriam as arestas.
 
-\subsection{Programação Linear e Complexidade}
-O roteamento de fibras pode ser formulado como um problema de \textbf{programação linear inteira},
-onde variáveis binárias indicam se uma fibra ou enlace é utilizado.
-Entretanto, tais problemas são NP-difíceis, devido à combinação exponencial de caminhos possíveis.
-Por isso, heurísticas como Dijkstra são práticas e eficientes em instâncias reais.
+Os cabos ópticos são constituídos de fibras agrupadas em tubos. Cada fibra por
+sua vez, pode trafegar zero, um ou vários comprimentos de onda ($\lambda$).
+Em uma rede física, as fibras são redirecionadas nos vértices (CEs e CAs) de
+acordo com as demandas de atendimento das operadoras. CAs atendem clientes finais,
+geralmente com o uso de tecnologias de Redes Ópticas Passivas (PON).
 
-\subsection{Roteamento e Alocação de Banda}
+\subsection{Algoritmos}
+O problema de roteamento em redes pode ser resolvido por diferentes algoritmos.
+Os mais relevantes para o presente artigo são Dijkstra (encontra o caminho de
+menor custo em grafos com pesos não negativos) \cite{dijkstra2022note} e
+Bellman-Ford (lida com arestas de peso negativo, mas com maior complexidade
+temporal). Para redes ópticas, em que os custos são sempre não negativos
+(distância, atenuação, ou custo de instalação), o algoritmo de Dijkstra é mais
+adequado.
+
+O roteamento de fibras pode ser formulado como um problema de programação
+linear inteira, onde variáveis binárias indicam se uma fibra ou enlace é
+utilizado. Entretanto, tais problemas são NP-difíceis, devido à combinação
+exponencial de caminhos possíveis. Por isso, heurísticas como Dijkstra são
+práticas e eficientes em instâncias reais.
+
 Além da escolha do caminho, a rede precisa alocar espectro e largura de banda.
-O problema de \textit{Routing and Wavelength Assignment} (RWA) é conhecido por sua complexidade computacional,
-reforçando a necessidade de algoritmos heurísticos e aproximativos.
+O problema de \textit{Routing and Wavelength Assignment} (RWA) é conhecido por
+sua complexidade computacional, reforçando a necessidade de algoritmos
+heurísticos e aproximativos.
