--- a/sections/1_header.tex
+++ b/sections/1_header.tex
@@ -1,4 +1,4 @@
-\title{Instructions for Authors of SBC Conferences\\ Papers and Abstracts}
+\title{Heurística de Roteamento e Alocação de Fibras em Redes Ópticas}
 
 \author{Diego M. A. Lütke}
 
