--- a/util/references.bib
+++ b/util/references.bib
@@ -37,3 +37,15 @@
 	year = {2009},
 	publisher = {Morgan Kaufmann},
 }
+
+@article{zang2000review,
+	title = {A review of routing and wavelength assignment approaches for
+	         wavelength-routed optical WDM networks},
+	author = {Zang, Hui and Jue, Jason P and Mukherjee, Biswanath and others
+	          },
+	journal = {Optical networks magazine},
+	volume = {1},
+	number = {1},
+	pages = {47--60},
+	year = {2000},
+}
