wip problem definition

--- a/sections/4_fundaments.tex
+++ b/sections/4_fundaments.tex
@@ -1,7 +1,7 @@
 \section{Fundamentação Teórica} \label{sec:fundaments}
 
 Para o roteamento de fibras, é necessário pelo menos o entendimento básico de
-dois temas: (1) a composićão de elementos passivos das redes ópticas e (2)
+dois temas: (1) a composição de elementos passivos das redes ópticas e (2)
 algoritmos (no sentido de operações, otimização e tipos de problemas).
 
 \subsection{Redes Ópticas}
@@ -23,7 +23,7 @@ geralmente com o uso de tecnologias de Redes Ópticas Passivas (PON).
 Esse redirecionamento das fibras ocorre com o uso de máquinas de fusão
 \cite{maeda2009optical}, cada par de fibras é acomodado em bandejas, conforme
 mostra a Figura \ref{fig:ce_detalhe_bandejas}. Em um caso ideal, espera-se que
-de acordo com as requisićões de demanda recebida, a ocupaćão das ranhuras seja
+de acordo com as requisições de demanda recebida, a ocupaćão das ranhuras seja
 feita de forma sequencial e organizada. Por exemplo, em um cabo contendo 12
 tubos, com 12 fibras cada cabo, o grupo de ranhuras superior recebe o primeiro
 tubo, o segundo grupo o segundo tubo, assim por diante.
