definicao do problema

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass[12pt]{article}
-\usepackage{./util/settings}
+\usepackage{util/settings}
 \usepackage{graphicx,url}
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
 \usepackage{tikz}
+\usetikzlibrary{graphs.standard}
      
 \sloppy
 
