--- a/sections/4_fundaments.tex
+++ b/sections/4_fundaments.tex
@@ -23,21 +23,21 @@ geralmente com o uso de tecnologias de Redes Ópticas Passivas (PON).
 Esse redirecionamento das fibras ocorre com o uso de máquinas de fusão
 \cite{maeda2009optical}, cada par de fibras é acomodado em bandejas, conforme
 mostra a Figura \ref{fig:ce_detalhe_bandejas}. Em um caso ideal, espera-se que
-de acordo com as requisições de demanda recebida, a ocupaćão das ranhuras seja
+de acordo com as requisições de demanda recebida, a ocupação das ranhuras seja
 feita de forma sequencial e organizada. Por exemplo, em um cabo contendo 12
 tubos, com 12 fibras cada cabo, o grupo de ranhuras superior recebe o primeiro
 tubo, o segundo grupo o segundo tubo, assim por diante.
 
 \begin{figure}
-  \begin{minipage}[c]{0.43\linewidth}
+  \begin{minipage}[c]{0.44\linewidth}
 	\includegraphics[width=\linewidth]{./images/caixa_emenda_fixacao_em_poste.png}
 	\caption{CE fixada em poste}
 	\label{fig:ce_fixacao_poste}
   \end{minipage}
   \hfill
-  \begin{minipage}[c]{0.6\linewidth}
+  \begin{minipage}[c]{0.5\linewidth}
 	\includegraphics[width=\linewidth]{./images/caixa_emenda_detalhe_bandejas.png}
-	\caption{Detalhe das bandejas de CE}
+	\caption{Detalhe bandejas de CE}
 	\label{fig:ce_detalhe_bandejas}
   \end{minipage}
 \end{figure}
@@ -79,13 +79,13 @@ sua complexidade computacional, reforçando a necessidade de algoritmos
 heurísticos e aproximativos \cite{artigorwa}.
 
 \begin{figure}
-  \begin{minipage}[c]{0.45\linewidth}
+  \begin{minipage}[c]{0.42\linewidth}
 	\includegraphics[width=\linewidth]{./images/dijkastra_01.png}
 	\caption{Grafo com custos}
 	\label{fig:dijkastra_graph}
   \end{minipage}
   \hfill
-  \begin{minipage}[c]{0.58\linewidth}
+  \begin{minipage}[c]{0.57\linewidth}
 	\includegraphics[width=\linewidth]{./images/dijkastra_02.png}
 	\caption{Iterações do algoritmo Dijkastra}
 	\label{fig:dijkastra_table}
