--- a/util/references.bib
+++ b/util/references.bib
@@ -1,9 +1,16 @@
-@incollection{dijkstra2022note,
+@article{dijkstra2022note,
 	title = {A note on two problems in connexion with graphs},
-	author = {Dijkstra, Edsger W},
-	booktitle = {Edsger Wybe Dijkstra: his life, work, and legacy},
-	pages = {287--290},
-	year = {2022},
+	volume = {1},
+	ISSN = {0945-3245},
+	url = {http://dx.doi.org/10.1007/BF01386390},
+	DOI = {10.1007/bf01386390},
+	number = {1},
+	journal = {Numerische Mathematik},
+	publisher = {Springer Science and Business Media LLC},
+	author = {Dijkstra, E. W.},
+	year = {1959},
+	month = dec,
+	pages = {269–271},
 }
 
 @article{maeda2009optical,
@@ -49,3 +56,15 @@
 	pages = {47--60},
 	year = {2000},
 }
+
+@book{lawler1985travelling,
+	title = {The Travelling Salesman Problem: A Guided Tour of Combinatorial
+	         Optimization},
+	author = {Lawler, E.L.},
+	series = {Wiley-Interscience series in discrete mathematics and
+	          optimization},
+	url = {https://books.google.com.br/books?id=qbFlMwEACAAJ},
+	year = {1985},
+	publisher = {John Wiley \& Sons},
+}
+
