--- a/util/references.bib
+++ b/util/references.bib
@@ -68,3 +68,25 @@
 	publisher = {John Wiley \& Sons},
 }
 
+@book{mukherjee2020springer,
+	title = {Springer handbook of optical networks},
+	author = {Mukherjee, Biswanath and Tomkos, Ioannis and Tornatore,
+	          Massimo and Winzer, Peter and Zhao, Yongli},
+	year = {2020},
+	publisher = {Springer Nature},
+}
+
+@book{bazaraa2011linear,
+	title = {Linear programming and network flows},
+	author = {Bazaraa, Mokhtar S and Jarvis, John J and Sherali, Hanif D},
+	year = {2011},
+	publisher = {John Wiley \& Sons},
+}
+
+@book{alwayn2004optical,
+	title = {Optical network design and implementation},
+	author = {Alwayn, Vivek},
+	year = {2004},
+	publisher = {Cisco Press},
+}
+
