--- a/sections/fundaments.tex
+++ b/sections/fundaments.tex
@@ -1,4 +1,4 @@
-\section{Fundamentação Teórica} \label{sec:fundaments}
+\section{Estado da Arte} \label{sec:fundaments}
 
 Para o roteamento de fibras, é necessário pelo menos o entendimento básico de
 dois temas: (1) a composição de elementos passivos das redes ópticas e (2)
@@ -10,9 +10,15 @@ Na teoria dos grafos, um grafo é uma estrutura composta por vértices ($V$)
 (também chamados de nós) e arestas ($E$). A relação entre $V$ e $E$ é dado por
 $G(V,E)$. Fazendo um paralelo com uma rede óptica, os vértices seriam as Caixas
 de Emenda (CE) e as Caixas de Atendimento (CA) \cite{maeda2009optical}; os
-cabos ópticos por sua vez seriam as arestas. Um exemplo de CE poste ser visto
-na Figura \ref{fig:ce_fixacao_poste}, a Figura \ref{fig:ce_detalhe_bandejas}
-mostra o interior de uma CE.
+cabos ópticos por sua vez seriam as arestas. O detalhe das arestas pode ser
+visto na Figura \ref{fig:ce_detalhe_bandejas}.
+
+\begin{figure}[ht]
+  \centering
+	\includegraphics[width=.5\textwidth]{./images/caixa_emenda_detalhe_bandejas.png}
+	\caption{Detalhe bandejas em Caixa de Emenda}
+	\label{fig:ce_detalhe_bandejas}
+\end{figure}
 
 Os cabos ópticos são constituídos de fibras agrupadas em tubos. Cada fibra por
 sua vez, pode trafegar zero, um ou vários comprimentos de onda ($\lambda$).
@@ -28,27 +34,14 @@ feita de forma sequencial e organizada. Por exemplo, em um cabo contendo 12
 tubos, com 12 fibras cada cabo, o grupo de ranhuras superior recebe o primeiro
 tubo, o segundo grupo o segundo tubo, assim por diante.
 
-\begin{figure}
-  \begin{minipage}[c]{0.44\linewidth}
-	\includegraphics[width=\linewidth]{./images/caixa_emenda_fixacao_em_poste.png}
-	\caption{CE fixada em poste}
-	\label{fig:ce_fixacao_poste}
-  \end{minipage}
-  \hfill
-  \begin{minipage}[c]{0.5\linewidth}
-	\includegraphics[width=\linewidth]{./images/caixa_emenda_detalhe_bandejas.png}
-	\caption{Detalhe bandejas de CE}
-	\label{fig:ce_detalhe_bandejas}
-  \end{minipage}
-\end{figure}
+\subsection{Algoritmos para Cálculo de Rotas}
 
-\subsection{Algoritmos}
-
-Para descobrir a melhor rota, ou seja, qual sequência de cabos e caixas é o 
+Para descobrir a melhor rota, ou seja, qual sequência de cabos e caixas é o
 caminho mais curto entre uma caixa A e B, podemos considerar pelo menos dois
-algoritmos: Algoritmo de Dijkstra (encontra o caminho de menor custo em grafos
-com pesos não negativos) \cite{dijkstra2022note} e o Algoritmo de Bellman-Ford
-(lida com arestas de peso negativo, mas com maior complexidade temporal).
+algoritmos clássicos: Algoritmo de Dijkstra (encontra o caminho de menor custo
+em grafos com pesos não negativos) \cite{dijkstra2022note} e o Algoritmo de
+Bellman-Ford (lida com arestas de peso negativo, mas com maior complexidade
+temporal).
 
 Embora o Algoritmo de Dijkstra não funcione com custos negativos, podemos
 considerá-lo, visto que o custo será igual a distância, um exemplo de uso pode
@@ -59,7 +52,7 @@ necessita navegar até o fim do ramo.
 
 Ainda com os problemas observados com o Algoritmo de Dijkstra, podemos
 considerá-lo, pois do ponto de vista de complexidade de tempo, observa-se três
-etapas que fazem a base dessa complexiade: (1) quando um novo vértice é
+etapas que fazem a base dessa complexidade (1) quando um novo vértice é
 empurrado/adicionado à fila de prioridades, (2) quando um vértice com distância
 mínima é retirado da fila de prioridade e (3) quando a distância de um vértice
 é diminuída na fila de prioridade. Considerando uma estrutura de fila com lista,
@@ -71,12 +64,8 @@ O roteamento de fibras pode ser formulado como um problema de programação
 linear inteira \cite{griva2008linear}, onde variáveis binárias indicam se uma
 fibra ou enlace é utilizado. Entretanto, tais problemas são NP-difíceis
 \cite{artigorwa}, devido à combinação exponencial de caminhos possíveis. Por
-isso, heurísticas como Dijkstra são práticas e eficientes em instâncias reais.
-
-Além da escolha do caminho, a rede precisa alocar espectro e largura de banda.
-O problema de \textit{Routing and Wavelength Assignment} (RWA) é conhecido por
-sua complexidade computacional, reforçando a necessidade de algoritmos
-heurísticos e aproximativos \cite{artigorwa}.
+isso, heurísticas como Dijkstra são práticas e eficientes em instâncias reais
+\cite{mukherjee2020springer}.
 
 \begin{figure}
   \begin{minipage}[c]{0.42\linewidth}
@@ -91,4 +80,10 @@ heurísticos e aproximativos \cite{artigorwa}.
 	\label{fig:dijkastra_table}
   \end{minipage}
 \end{figure}
+
+
+Além da escolha do caminho, a rede precisa alocar espectro e largura de banda.
+O problema de \textit{Routing and Wavelength Assignment} (RWA) é conhecido por
+sua complexidade computacional, reforçando a necessidade de algoritmos
+heurísticos e aproximativos \cite{artigorwa}.
 
